Same as previous commit, prevent flickering on mouse cursor hover inversion

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -1550,7 +1550,7 @@ body.light .contact video.light {
   background: rgba(0, 0, 0, 0.42);
   background-image: url(../img/pattern2.png);
   z-index: -1;
-  mix-blend-mode: unset;
+  mix-blend-mode: soft-light !important;
 }
 /* Pull video under overlay */
 video.banner {
